ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - http:
        paths:
          - path: /movies
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 5000
